<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.anurag.sneakerapp.ui.viewmodel.SneakerDetailsViewModel" />

        <variable
            name="sneaker"
            type="com.anurag.sneakerapp.data.model.Sneaker" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_chevron_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_left"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/iv_sneaker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/iv_sneaker"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/iv_chevron_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_sneaker"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/indicator1"
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/indicator_selected"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_sneaker" />

        <TextView
            android:id="@+id/indicator2"
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/indicator_unselected"
            app:layout_constraintStart_toEndOf="@+id/indicator1"
            app:layout_constraintTop_toBottomOf="@+id/iv_sneaker" />

        <TextView
            android:id="@+id/indicator3"
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/indicator_unselected"
            app:layout_constraintStart_toEndOf="@+id/indicator2"
            app:layout_constraintTop_toBottomOf="@+id/iv_sneaker" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicator1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="35dp"
                    android:src="@drawable/ic_info"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/titleTextView"
                    app:layout_constraintTop_toTopOf="parent"  />

                <TextView
                    android:id="@+id/titleTextNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textSize="14sp"
                    android:layout_marginStart="40dp"
                    android:text="@string/latin_sentence_note"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

                <LinearLayout
                    android:id="@+id/sizeLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTextNote"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:text="@string/size_uk"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewSize1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_unselected"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:text="@string/_7"
                        android:textColor="@android:color/holo_orange_light" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="1dp" />

                    <TextView
                        android:id="@+id/textViewSize2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_unselected"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:text="@string/_8"
                        android:textColor="@android:color/holo_orange_light" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="1dp" />

                    <TextView
                        android:id="@+id/textViewSize3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_unselected"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:text="@string/_9"
                        android:textColor="@android:color/holo_orange_light" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="1dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/colorLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sizeLinearLayout"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/tv_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewColor1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/size_selector1"
                        android:clickable="true"
                        android:onClick="onTextViewClicked"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="1dp" />

                    <TextView
                        android:id="@+id/textViewColor2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/size_selector2"
                        android:clickable="true"
                        android:onClick="onTextViewClicked"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="1dp" />

                    <TextView
                        android:id="@+id/textViewColor3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/size_selector3"
                        android:clickable="true"
                        android:onClick="onTextViewClicked"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="1dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/priceLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/colorLinearLayout"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight=".3"
                        android:text="@string/price"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/priceTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:textSize="20sp"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/add_to_cart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight=".6"
                        android:background="@drawable/square_button_background"
                        android:text="@string/add_to_cart" />

                </LinearLayout>

                <Space
                    android:id="@+id/bottomSpace"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priceLinearLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/curvedBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageButton
                    android:id="@+id/iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_home"
                    android:background="@drawable/circular_tint_background"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/iv_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_cart"
                    android:background="@drawable/circular_tint_background"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_home"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/bottomSpaceNew"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_cart" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
